--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="cabecalho">
        <img class="cabecalho-imagem" src="alurastart logo.png " alt= "logo da alura start">
        <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"> escola</li>
+            <li class="cabecalho-lista-item"> esc</li>
             <li class="cabecalho-lista-item"> Estudante</li>
         <ul>
     </header>
