--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <header class="cabecalho">
        <img class="cabecalho-imagem">
        <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"> esc</li>
+            <li class="cabecalho-lista-item"> escola</li>
             <li class="cabecalho-lista-item"> Estudante</li>
         <ul>
     </header>
