--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-       <img class="cabecalho-imagem">
+    <header class="cabecalho"
+       <img class="cabecalho-imagem" src="alura">
        <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item"> escola</li>
             <li class="cabecalho-lista-item"> Estudante</li>
