--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
     <header class="cabecalho"
-       <img class="cabecalho-imagem" src="alura">
+       <img class="cabecalho-imagem" src="startalura">
        <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item"> escola</li>
             <li class="cabecalho-lista-item"> Estudante</li>
