--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body> 
     <header class="cabecalho"
-       <img class="cabecalho-imagem" src="startalura">
+       <img class="cabecalho-imagem">
        <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"> escola</li>
+            <li class="cabecalho-lista-item"> Escola</li>
             <li class="cabecalho-lista-item"> Estudante</li>
         <ul>
     </header>
