--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem=" src="download.png""alt="logo da alura sansung">
+        <img class="cabecalho-imagem=" src="256_144_4.avif""alt="256_144_4.avif">
         <ul class="cabecalho-lista">
             <li class=" cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
