--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem=" src="cupom-de-desconto-alura-start.png""alt="cupom-de-desconto-alura-start.png">
+        <img class="cabecalho-imagem=" src="alurastart logo (1).png" alt="Alunos esdudando ">
         <ul class="cabecalho-lista">
             <li class=" cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
