--- a/index.html
+++ b/index.html
@@ -26,4 +26,8 @@
     </div>
          <img class="escola-imagem" src="Education-pana.png" alt="Professora no quadro">
 </section>
+<section class="estudante">
+    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+</section>
+ 
 
