--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </section>
 <section class="estudante">
     <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <img src="b55e17000dffde868c507786b18a41ab (1).jpg" alt="foto do miguel">
 </section>
  
 
