--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 </section>
 <section class="estudante">
     <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-    <img src="b55e17000dffde868c507786b18a41ab (1).jpg" alt="foto do miguel">
+    <img clas=estudante-imagem src="b55e17000dffde868c507786b18a41ab (1).jpg" alt="foto do miguel">
+    <h3 class="estudante-nome">Miguel</h3>
+    <img class=estudante-icone src="i489928.jpeg" alt="X"
+    <img class=estudante-icone src="i489929.jpeg" alt="facebook"
+    <img class=estudante-icones src="8385736-instagram-social-media-icon-symbol-element-vector-illustration-gratis-vetor.jpg" alt="instagram"
+
 </section>
  
 
