--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="alurastart logo (1).png" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
@@ -31,22 +31,22 @@
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="b55e17000dffde868c507786b18a41ab (1).jpg" alt="foto do marcelo">
-            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-imagem" src="b55e17000dffde868c507786b18a41ab (1).jpg" alt="foto do miguel">
+            <h3 class="estudante-nome">Miguel</h3>
             <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
+            <img class="estudante-imagem" src="7bd81a54772b0b08530bcdd5729220fb.jpg" alt="foto da gabi">
             <h3 class="estudante-nome">Gabriela</h3>
             <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
-            <h3 class="estudante-nome">Lizandra</h3>
+            <img class="estudante-imagem" src="images.jpeg" alt="foto da Isadora">
+            <h3 class="estudante-nome">Isadora</h3>
             <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
@@ -54,8 +54,8 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Joice.jpg" alt="foto da joice">
-            <h3 class="estudante-nome">Joice</h3>
+            <img class="estudante-imagem" src="menino-alegre-com-cabelo-vermelho-de-fogo_1639-54126.avif" alt="foto do Gustavo">
+            <h3 class="estudante-nome">Gustavo</h3>
             <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
