--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="menino-alegre-com-cabelo-vermelho-de-fogo_1639-54126.avif" alt="imagem que representa uma professora em sala de aula">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
@@ -61,8 +61,8 @@
             <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="index.html" alt="foto da Marcio">
-            <h3 class="estudante-nome">Marcio</h3>
+            <img class="estudante-imagem" src="images (1).jpeg" alt="foto da Marcela">
+            <h3 class="estudante-nome">Marcela</h3>
             <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
