--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
-        <img class="escola-imagem" src="mascote-dos-desenhos-animados-ilustracao-fofa-professora-ensinando-isolado_382438-308.avif" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="Education-pana.png" alt="imagem que representa uma professora em sala de aula">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
